test/errors/invalid_scrutinee_in_discontinue.ml
let () =
  match%discontinue () with
  | _ -> ()
  | [%effect? _] -> ()
;;